src/objects/Application_Question__c.object
<CustomObject>
    <fields>
        <fullName>Answer_To_Rerender_On__c</fullName>
        <inlineHelpText>The value you wish to display the extra field based on.</inlineHelpText>
        <label>Answer To Rerender On</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Character_Word_Assistance__c</fullName>
        <label>Character / Word Assistance</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Checkboxes_Options__c</fullName>
        <label>Checkboxes Options</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Field_From_Contact_Record__c</fullName>
        <description>This is the API name of the field on the contact record you wish to pull the value from.</description>
        <inlineHelpText>This is the API name of the field on the contact record you wish to pull the value from.</inlineHelpText>
        <label>Field From Contact Record</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_To_Set_On_Answer__c</fullName>
        <label>Field To Set On Answer</label>
        <picklist>
            <picklistValues>
                <fullName>Short_Text_Answer__c</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Checkbox_Answer__c</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Checkboxes_Answer__c</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Date_Answer__c</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email_Answer__c</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multi_Picklist_Answers__c</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Percent_Answer__c</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Picklist_Answer__c</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Text_Answer__c</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Field_to_Check_for_Rendering__c</fullName>
        <description>Please select which field you would like to be the controlling field, which will use the &quot;Answer to rerender on&quot; value to define if a field should display.</description>
        <inlineHelpText>Checkbox_Answer__c = Single Checkbox
Checkboxes_Answer__c = Checkboxes
Currency_Answer__c = Currency
Email_Answer__c = Email
Multi_Picklist_Answers__c = Multi-Select Picklist
Percent_Answer__c = Percent
Picklist_Answer__c = Single Picklist</inlineHelpText>
        <label>Field to Check for Rendering</label>
        <picklist>
            <picklistValues>
                <fullName>Checkbox_Answer__c</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Checkboxes_Answer__c</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Currency_Answer__c</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email_Answer__c</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multi_Picklist_Answers__c</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Percent_Answer__c</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Picklist_Answer__c</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Short_Text_Answer__c</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Field_to_Conditionally_Render__c</fullName>
        <description>Select which field you would like to conditionally render based on answer.</description>
        <label>Field to Conditionally Render</label>
        <picklist>
            <picklistValues>
                <fullName>Short Text</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Long Text</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Single Picklist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multi-Select Picklist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Checkbox</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Checkboxes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Number</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Currency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Percent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Radio Select</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Single Checkbox</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Help_Text__c</fullName>
        <label>Help Text</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Is_Branching_Question__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This should be checked if the question is a branching question and the template may need changing.</description>
        <inlineHelpText>This should be checked if the question is a branching question and the template may need changing.</inlineHelpText>
        <label>Is Branching Question</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Picklist_Options__c</fullName>
        <label>Picklist Options</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Question_Number__c</fullName>
        <externalId>true</externalId>
        <label>Question ID</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Question_Type__c</fullName>
        <label>Question Type</label>
        <picklist>
            <picklistValues>
                <fullName>Short Text</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Long Text</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Single Picklist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multi-Select Picklist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Checkbox</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Checkboxes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Number</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Currency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Percent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Radio Select</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Single Checkbox</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <label>Question</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Subtext__c</fullName>
        <label>Subtext</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Application Question</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Question_Number__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>With_Helptext</fullName>
        <columns>Question_Number__c</columns>
        <columns>NAME</columns>
        <columns>Question_Type__c</columns>
        <columns>Question__c</columns>
        <columns>Help_Text__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>With Helptext</label>
    </listViews>
    <nameField>
        <label>Application Question Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Application Question</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>